modules/triage/assets/triage-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: triage-party
  namespace: triage-tinkerbell
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: triage-party
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2021-11-08T08:29:08-05:00"
      creationTimestamp: null
      labels:
        app: triage-party
    spec:
      containers:
      - env:
        - name: GITHUB_TOKEN
          valueFrom:
            secretKeyRef:
              key: token
              name: triage-party-github-token
        image: triageparty/triage-party:1.4.0
        imagePullPolicy: Always
        name: triage-party
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/config
          name: config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: triage-party-config
        name: config
