modules/triage/assets/triage-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  #annotations:
  #  external-dns.alpha.kubernetes.io/hostname: triage.meyu.us
  name: triage-party
  namespace: triage-tinkerbell
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32374
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: triage-party
  sessionAffinity: None
  type: NodePort
