modules/triage/assets/triage-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    use-proxy-protocol: "true"
  name: triage-tinkerbell
  namespace: triage-tinkerbell
spec:
  rules:
  - host: ${triage_host}
    http:
      paths:
      - backend:
          service:
            name: triage-party
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - ${triage_host}
    secretName: ${triage_host}-crt
